--- a/PizzaHut/partials/pizza.htm
+++ b/PizzaHut/partials/pizza.htm
@@ -1,5 +1,4 @@
-﻿
-
+﻿<!--Details of pizza--> 
 <div class="container-fluid">
     <div class="row-fluid">
         <div class="span8">
@@ -17,7 +16,7 @@
                 </div>
             </div>
             <div class="span8">
-                <img ng-src="img/pizzas/a.png" alt="{{pizza.name}}" />
+                <img ng-src="img/pizzas/{{pizza.id}}.png" alt="{{pizza.name}}" />
             </div>
             <div class="span4">
                 <b>{{pizza.ingridients}}</b>
