--- a/PizzaHut/partials/thanks.htm
+++ b/PizzaHut/partials/thanks.htm
@@ -1,4 +1,5 @@
-﻿<div class="container-fluid">
+﻿<!--Thanks for buying page--> 
+<div class="container-fluid">
     <div class="row-fluid">
         <div class="span8">
             <div class="alert alert-success" role="alert">Thank you for buying pizza!!!</div>
